# asl-video-generator

./: README.md  main.py  pyproject.toml
.beads/: .gitignore  config.yaml  issues.jsonl
.github/workflows/: quality.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
assets/lessons/: 500_Sentences_1769817458445.md
docs/: content-manifest.schema.json
docs/benchmarks/: mesh_backend_benchmark_baseline.json
output/poses/: around_the_house_(family_&_daily_life)_001.json  around_the_house_(family_&_daily_life)_002.json  around_the_house_(family_&_daily_life)_003.json  around_the_house_(family_&_daily_life)_004.json  around_the_house_(family_&_daily_life)_005.json  around_the_house_(family_&_daily_life)_006.json  around_the_house_(family_&_daily_life)_007.json  around_the_house_(family_&_daily_life)_008.json  around_the_house_(family_&_daily_life)_009.json  around_the_house_(family_&_daily_life)_010.json  manifest.json
output/threejs/: hello_anim.json
output/videos/: manifest.json
output/vocab/: hello.json
scripts/: benchmark_mesh_backends.py  download_wlasl_poses.py  generate_poses.py  render_videos.py  upload_to_s3.py
src/asl_video_generator/: __init__.py  avatar_renderer.py  cli.py  config.py  diffusion_renderer.py  gloss_translator.py  lesson_parser.py  pose_dictionary.py  pose_generator.py  vocabulary_generator.py
tests/: conftest.py  test_avatar_renderer_mesh.py  test_avatar_renderer_render3d_smoke.py  test_benchmark_baseline_artifact.py  test_benchmark_mesh_backends_script.py  test_config.py  test_gloss_translator.py  test_mesh_pipeline_e2e.py  test_pose_dictionary.py  test_pose_generator.py  test_quality_workflow.py  test_render_videos_script.py  test_vocabulary_generator.py
